<resources>
    <string name="app_name">Balance Book</string>
    <!-- Strings used for fragments for navigation -->

    <!-- TODO: Remove or change this placeholder text -->
    <string name="calendar_prev_button_text">prev month</string>
    <string name="calendar_next_button_text">next month</string>
    <string name="calendar_week_label_sun">Sun</string>
    <string name="calendar_fab_button_text">new balance add</string>
    <string name="calendar_week_label_mon">Mon</string>
    <string name="calendar_week_label_tue">Tue</string>
    <string name="calendar_week_label_web">Web</string>
    <string name="calendar_week_label_thu">Thu</string>
    <string name="calendar_week_label_fri">Fri</string>
    <string name="calendar_week_label_sat">Sat</string>
    <string name="bottom_navigation_view_stats">Bottom Navigation View Stats</string>
    <string name="bottom_navigation_view_setting">Bottom Navigation View Setting</string>
    <string name="bottom_nav_view_home_text">ホーム</string>
    <string name="bottom_nav_view_stats_text">統計</string>
    <string name="bottom_nav_view_setting_text">設定</string>
    <string name="system_default_icon_description">スマートフォンの画面に英語のiの文字が書かれた画像</string>
    <string name="system_default_text_string">システムデフォルト</string>
    <string name="light_mode_icon_description">太陽の画像</string>
    <string name="light_mode_text_string">ライトモード</string>
    <string name="system_default_radio_button_description">システムデフォルトのラジオボタンを選択するアイコン</string>
    <string name="light_mode_radio_button_description">ライトボタンのラジオボタンを選択するアイコン</string>
    <string name="dark_mode_text_string">ダークモード</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="record_date_label_text_string">日付</string>
    <string name="record_amount_label_text_string">金額</string>
    <string name="record_class_label_text_string">分類</string>
    <string name="record_memo_label_text_string">内容</string>
    <string name="record_edit_date_hint">日付を入力してください。</string>
    <string name="record_edit_time_hint">時間を入力してください。</string>
    <string name="record_edit_amount_text_hint">金額を入力してください。</string>
    <string name="record_edit_class_text_hint">分類</string>
    <string name="record_edit_memo_text_hint">内容</string>
    <string name="record_cancel_button_string">キャンセル</string>
    <string name="record_save_button_string">保存</string>

</resources>